--- a/src/index.css
+++ b/src/index.css
@@ -7,17 +7,12 @@ ol, ul {
     padding-left: 30px;
 }
 
-.board-row:after {
-    clear: both;
-    content: "";
-    display: table;
-}
 
 .status {
     margin-bottom: 10px;
 }
 
-.square {
+.poster {
     background: #fff;
     border: 1px solid #999;
     float: left;
@@ -30,14 +25,6 @@ ol, ul {
     padding: 0;
     text-align: center;
     width: 34px;
-}
-
-.square:focus {
-    outline: none;
-}
-
-.kbd-navigation .square:focus {
-    background: #ddd;
 }
 
 .game {
