--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,11 @@ ol, ul {
     padding-left: 30px;
 }
 
-
-.status {
-    margin-bottom: 10px;
+.card {
+    display: grid;
+    border: 1px solid black;
+    width: 50%;
+    margin: 0 auto;
 }
 
 .poster {
@@ -19,19 +21,25 @@ ol, ul {
     font-size: 24px;
     font-weight: bold;
     line-height: 34px;
-    height: 34px;
-    margin-right: -1px;
-    margin-top: -1px;
+    height: 200px;
+    margin-right: 10px;
+    margin-top: 1px;
     padding: 0;
     text-align: center;
-    width: 34px;
+    width: 100px;
+}
+
+.movie-details {
+    float: bottom;
+}
+
+.board {
+    display: grid;
+    background: burlywood;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
 }
 
 .game {
-    display: flex;
-    flex-direction: row;
-}
 
-.game-info {
-    margin-left: 20px;
 }
